--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,5 @@
             android:exported="true" >
         </service>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
